--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+<link rel="manifest" href="/manifest.json">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -10,7 +11,18 @@
     <meta name="theme-color" content="#667eea">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta property="og:title" content="이모톡 - 감정이 살아나는 메시지">
+    <meta property="og:description" content="문자가 살아 움직이는 신기한 경험!">
+    <meta property="og:image" content="https://emotalk-juno.netlify.app/og-image.png">
+    <meta property="og:url" content="https://emotalk-juno.netlify.app">
     <link rel="apple-touch-icon" href="/icon-192x192.png">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'GA_MEASUREMENT_ID');
+    </script>
 </head>
 <body>
     <!-- 네비게이션 -->
@@ -183,4 +195,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
